# markos

./: .env.example  .gitignore  README.md  app.json  docker-compose.yml  manifest.yml  pyproject.toml
.github/workflows/: generate-requirements.yml
app/: bot.py  db.py  pyproject.toml
app/scripts/: 3_preprocessing.py  6_create_table.py  generate.py  insert.py  make_sentences.py  preprocessing.py
scripts/: generate.py  make_sentences.py  save_slack_comments.py
